# BetterBins

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bin_classes.rs  bin_generator.rs  bin_info_storage.rs  bin_info_storing.rs  bin_scoring.rs  bin_set_coverage_analysis.rs  bin_set_kmer_analysis.rs  bin_sets.rs  classic_best_bin.rs  clustering.rs  contig_type_predictor.rs  contigs.rs  eukaryotic_contig_gatherer.rs  evo_alg_gen_tracking.rs  evo_alg_runner.rs  evo_alg_utils.rs  graphing.rs  initial_bins_and_contigs.rs  initialise_bins_and_contigs.rs  main.rs  prokaryotic_contig_gatherer.rs  random.rs  utils.rs
tests/new_tests/classic_best_bin_test/test_bins/: Cow_36641_day_56_trimmed.066.fa  Cow_36641_day_56_trimmed.066_missing_one_contig.fa
tests/new_tests/eukaryotic_contig_gatherer_test/compleasm_sacch_test_result_dir/: eukaryotic_quick_summary.txt  example_quick_summary_info.txt  expected_ids.txt
tests/new_tests/full_scale_test/test_1/results/: buscos_in_contigs.txt  original_bins_summary_file.tsv
tests/new_tests/initialise_bins_and_contigs_test/checkm2_results/: quality_report.tsv
tests/new_tests/initialise_bins_and_contigs_test/full_initialise_test/: original_bins_summary_file.tsv
tests/new_tests/initialise_bins_and_contigs_test/unique_contigs_compleasm_expected_result/: summary.txt
tests/new_tests/misc_scripts/: get_unique_contigs.py
tests/new_tests/prokaryotic_contig_gatherer_test/: test_quality_report.tsv
tests/new_tests/prokaryotic_contig_gatherer_test/checkm2_contigs_test/checkm2_results/: quality_report.tsv
(+25 files in other folders)
