[package]
name = "BetterBins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
itertools = "0.10.5"
clap = {version = "4.1.8", features = ["derive"]}
ndarray = "0.15.4"
rand = "0.8.5"
blake3 = "0.3.8"
fs_extra = "1.2.0"
fern = "0.6"
log = "0.4"
chrono = "0.4"
rayon = "1.7.0"
dashmap = "5.4.0"
lazy_static = "1.4"
non-dominated-sort = "0.3.1"
glob = "0.3.1"
[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
regex = "1.10.2"